--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "eslint": "^8.25.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^4.2.1",
     "typescript": "^4.8.4"
   }
