--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.2.0",
     "@types/node": "^18.11.0",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "eslint": "^8.25.0",
@@ -20,7 +21,9 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^4.2.1",
     "husky": "^8.0.1",
+    "jest": "^29.2.0",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
